# gaal-v3

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
agents/: __init__.py  judge_agent.py  orchestrator_agent.py  team_agent.py
config/: gaal_v3.yaml  gaal_v3_hard.yaml  gaal_v3_super.yaml  scorecard.yaml
core/: __init__.py  model_router.py  orchestrator.py  report.py
gaal_v3/: __init__.py  run.py
gaal_v3/agents/: base.py  orchestrator_agent.py  team_agent.py
gaal_v3/core/: __init__.py  graph.py  model_router.py  orchestrator.py  persistence.py  report.py
scripts/: gaal-cron.sh
templates/: report_v3.md.j2
tests/: __init__.py  test_agents.py  test_graph.py  test_persistence.py
