[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaal-v3"
version = "3.0.0"
description = "GAAL v3 — LangGraph-inspired StateGraph Arena Framework"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["gaal_v3*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
